# mcp_server

./: .env-example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  go.mod
cmd/lambda/: main.go
cmd/server/: main.go
config/: resources.json  tools.json
crates/app/: Cargo.toml  resources.json
crates/app/src/: auth.rs  dynamo.rs  lambda.rs  main.rs
crates/app/src/notify/: ses.rs
crates/app/src/tools/: account.rs  mod.rs  webpush.rs
crates/marketplace/: Cargo.toml
crates/marketplace/src/: main.rs
crates/marketplace/src/tools/: channel_msg.rs  subscription.rs
crates/mcpserver/: Cargo.toml
crates/mcpserver/src/: transport_http.rs  types.rs  validate.rs
examples/: basic_server.rs  cognito_server.rs  resources.json  tools.json
internal/tools/: stubs.go  stubs_test.go
internal/transport/: lambda.go  lambda_test.go
nginx/: mcp.conf
pkg/mcpserver/: go.mod  loader.go  mcpserver.go  mcpserver_test.go  transport_http.go  transport_http_test.go  types.go  validate.go
rust/: Cargo.toml
rust/crates/marketplace/src/notify/: mod.rs  sns.rs  webpush.rs
rust/crates/marketplace/src/tools/: channel.rs  mod.rs  otp.rs
rust/crates/mcpserver/src/: lib.rs  server.rs
scripts/: deploy.sh  nginx.sh
src/: lib.rs  loader.rs  server.rs  transport_http.rs  types.rs
