[package]
name = "mcpserver"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "MCP (Model Context Protocol) server library for Rust — a pure protocol handler implementing the 2025-03-26 spec"
license = "MIT"
repository = "https://github.com/hackemy/mcp_server"
readme = "README.md"
keywords = ["mcp", "context-protocol", "ai", "llm", "jsonrpc"]
categories = ["web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
http-body-util = "0.1"
hyper = "1"
tracing-subscriber = "0.3"
