[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
mcpserver = { path = "../mcpserver" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
async-trait = "0.1"

# AWS
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-sns = "1"
aws-sdk-sesv2 = "1"

# Auth
jsonwebtoken = "9"

# Crypto
sha2 = "0.10"
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
lambda = ["dep:lambda_http", "dep:lambda_runtime"]

[dependencies.lambda_http]
version = "0.14"
optional = true

[dependencies.lambda_runtime]
version = "0.14"
optional = true
